--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-    "author": "ICJR",
-    "dependencies": {
-        "@nomiclabs/hardhat-etherscan": "^3.1.0",
-        "@openzeppelin/contracts": "^4.7.0"
-    },
-    "description": "ERC721 smart contract implementations",
-    "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.1.0",
-        "@nomiclabs/hardhat-waffle": "^2.0.3",
-        "@openzeppelin/test-helpers": "^0.5.15",
-        "chai": "^4.3.6",
-        "erc721a": "^4.1.0",
-        "eslint": "^8.19.0",
-        "eslint-plugin-mocha": "^10.0.5",
-        "eslint-plugin-node": "^11.1.0",
-        "ethereum-waffle": "^3.4.4",
-        "ethers": "^5.6.9",
-        "hardhat": "^2.10.0",
-        "hardhat-gas-reporter": "^1.0.8",
-        "prettier": "^2.7.1",
-        "prettier-plugin-solidity": "^1.0.0-dev.22",
-        "solidity-coverage": "^0.7.21"
-    },
-    "files": [
-        "/contracts/**/*.sol",
-        "/build/contracts/*.json",
-        "!/contracts/mocks/**/*"
-    ],
-    "license": "MIT",
-    "main": "index.js",
-    "name": "ERC721",
-    "scripts": {
-        "test": "hardhat test",
-        "test:gas": "REPORT_GAS=true npx hardhat test",
-        "coverage": "REPORT_COVERAGE=true npx hardhat coverage",
-        "lint": "npm run lint:js && npm run lint:sol",
-        "lint:js": "eslint --ignore-path .gitignore . --fix",
-        "lint:sol": "prettier --write \"contracts/**/*.sol\""
-    },
-    "version": "0.0.1"
+  "author": "ICJR",
+  "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@openzeppelin/contracts": "^4.7.0"
+  },
+  "description": "ERC721 smart contract implementations",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "chai": "^4.3.6",
+    "erc721a": "^4.1.0",
+    "eslint": "^8.19.0",
+    "eslint-plugin-mocha": "^10.0.5",
+    "eslint-plugin-node": "^11.1.0",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
+    "hardhat": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-dev.22",
+    "solidity-coverage": "^0.7.21"
+  },
+  "files": [
+    "/contracts/**/*.sol",
+    "/build/contracts/*.json",
+    "!/contracts/mocks/**/*"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "name": "@esportsplus/erc721",
+  "scripts": {
+    "test": "hardhat test",
+    "test:gas": "REPORT_GAS=true npx hardhat test",
+    "coverage": "REPORT_COVERAGE=true npx hardhat coverage",
+    "lint": "npm run lint:js && npm run lint:sol",
+    "lint:js": "eslint --ignore-path .gitignore . --fix",
+    "lint:sol": "prettier --write \"contracts/**/*.sol\""
+  },
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/esportsplus/ERC721.git"
+  },
+  "bugs": {
+    "url": "https://github.com/esportsplus/ERC721/issues"
+  },
+  "homepage": "https://github.com/esportsplus/ERC721#readme"
 }
