--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "author": "ICJR",
-  "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^4.7.0"
-  },
+  "dependencies": {},
   "description": "ERC721 smart contract implementations",
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.0",
     "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.3.6",
     "erc721a": "^4.1.0",
